@@ -1283,11 +1283,11 @@
 </td>
 <td class=cellinside><br /> Plots the equivalent dose (De) in dependency of the chosen signal integral (cf. Bailey et al., 2003).<br /> The function is simply passing several arguments to the function  plot  and the used<br /> analysis functions and runs it in a loop. Example:  legend.pos  for legend position,<br /> legend  for legend text. <br />
 </td>
-<td class=cellinside>0.1.0
+<td class=cellinside>0.1.1
 </td>
-<td class=cellinside>2016-05-19
+<td class=cellinside>2016-09-22
 </td>
-<td class=cellinside>23:48:19
+<td class=cellinside>15:33:35
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
