@@ -1,5 +1,5 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Thu Sep 22 12:22:15 2016
+% Thu Sep 22 15:38:00 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -123,7 +123,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   65 & plot\_AbanicoPlot & Function to create an Abanico Plot. & $<$br /$>$ A plot is produced which allows comprehensive presentation of data precision$<$br /$>$ and its dispersion around a central value as well as illustration of a$<$br /$>$ kernel density estimate, histogram and/or dot plot of the dose values.$<$br /$>$ & 0.1.10 & 2016-09-22 & 10:11:42
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Inspired by a plot$<$br /$>$ introduced by Galbraith \& Green (1990)$<$br /$>$  R Luminescence Package Team \\ 
-  66 & plot\_DetPlot & Create De(t) plot & $<$br /$>$ Plots the equivalent dose (De) in dependency of the chosen signal integral (cf. Bailey et al., 2003).$<$br /$>$ The function is simply passing several arguments to the function  plot  and the used$<$br /$>$ analysis functions and runs it in a loop. Example:  legend.pos  for legend position,$<$br /$>$ legend  for legend text. $<$br /$>$ & 0.1.0 & 2016-05-19 & 23:48:19
+  66 & plot\_DetPlot & Create De(t) plot & $<$br /$>$ Plots the equivalent dose (De) in dependency of the chosen signal integral (cf. Bailey et al., 2003).$<$br /$>$ The function is simply passing several arguments to the function  plot  and the used$<$br /$>$ analysis functions and runs it in a loop. Example:  legend.pos  for legend position,$<$br /$>$ legend  for legend text. $<$br /$>$ & 0.1.1 & 2016-09-22 & 15:33:35
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   67 & plot\_DRTResults & Visualise dose recovery test results & $<$br /$>$ The function provides a standardised plot output for dose recovery test$<$br /$>$ measurements.$<$br /$>$ & 0.1.10 & 2016-09-22 & 10:11:42
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
